# ibus-steno

./: .gitignore  AUTHORS  Makefile.am  README  TODO  configure.ac  ibus-steno.spec.in
dict/: Makefile.am  default.json
engine/: Makefile.am  engine.py  factory.py  ibus-steno  ibus-steno.in  main.py  steno.xml.in.in
